Fix source spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,9 @@ body {
 
 .source {
   font-family: 'Share Tech Mono', monospace;
-}
-
-.source a {
   font-size: 12px;
   color: gray;
   text-decoration: none;
-}
-
-.source span {
-  font-size: 12px;
-  color: gray;
 }
 
 .source a:active {
